--- a/School/backend/docker-compose.prod.yml
+++ b/School/backend/docker-compose.prod.yml
@@ -44,6 +44,17 @@ services:
       redis:
         condition: service_started
     restart: unless-stopped
+    deploy:
+      replicas: 3
+      restart_policy:
+        condition: on-failure
+      resources:
+        limits:
+          cpus: '1.0'
+          memory: 1G
+        reservations:
+          cpus: '0.5'
+          memory: 512M
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/health/"]
       interval: 30s
