--- a/School/backend/nginx.conf
+++ b/School/backend/nginx.conf
@@ -31,6 +31,11 @@ server {
     add_header X-XSS-Protection "1; mode=block";
     add_header Referrer-Policy "strict-origin-when-cross-origin";
     add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; connect-src 'self' https: wss:;";
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload";
+    add_header Permissions-Policy "geolocation=(), microphone=(), camera=()";
+    add_header Cross-Origin-Embedder-Policy "require-corp";
+    add_header Cross-Origin-Opener-Policy "same-origin";
+    add_header Cross-Origin-Resource-Policy "same-origin";
 
     # Gzip compression
     gzip on;
